crates/toml_edit/tests/snapshots/invalid/string/multiline-bad-escape-02.stderr
TOML parse error at line 2, column 11
  |
2 | k = """t\ t"""
  |           ^
invalid multi-line basic string, expected newline
